--- a/Sample.WorkerService/Scheduler.WorkerService/Scheduler.WorkerService.csproj
+++ b/Sample.WorkerService/Scheduler.WorkerService/Scheduler.WorkerService.csproj
@@ -15,5 +15,12 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
 	<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Windows.Forms">
+      <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.WindowsDesktop.App\6.0.1\System.Windows.Forms.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
