added hangfireconfig to appsettings

--- a/Sample.WorkerService/Scheduler.WorkerService/appsettings.json
+++ b/Sample.WorkerService/Scheduler.WorkerService/appsettings.json
@@ -9,5 +9,20 @@
   "ConnectionStrings": {
     //"SQLDatabaseConnection": "Data Source=.;Initial Catalog=Hangfire;Integrated Security=True;Connect Timeout=30;Encrypt=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=true"
     "SQLiteDatabaseConnection": "Data Source=hangfire.db;"
+  },
+  "HangfireConfig": {
+    "Urls": [ "http://localhost:9600", "https://localhost:9601" ],
+    "Jobs": [
+      {
+        "Name": "SendThanksMail",
+        "Enable": false,
+        "CronExpression": "*/5 * * * *" /* At every 5th minute */
+      },
+      {
+        "Name": "RemindDrinkWater",
+        "Enable": true,
+        "CronExpression": "0 * * * *" /* At minute 0 */
+      }
+    ]
   }
 }
