--- a/Sample.WorkerService/Scheduler.WorkerService/Scheduler.WorkerService.csproj
+++ b/Sample.WorkerService/Scheduler.WorkerService/Scheduler.WorkerService.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Ardalis.GuardClauses" Version="3.3.0" />
 	<PackageReference Include="Bogus" Version="34.0.1" />
 	<PackageReference Include="Hangfire" Version="1.7.27" />
 	<PackageReference Include="Hangfire.Storage.SQLite" Version="0.3.0" />
