added create ws command

--- a/Sample.WorkerService/Scheduler.WorkerService/appsettings.json
+++ b/Sample.WorkerService/Scheduler.WorkerService/appsettings.json
@@ -11,7 +11,7 @@
     "SQLiteDatabaseConnection": "Data Source=hangfire.db;"
   },
   "HangfireConfig": {
-    "Urls": [ "http://localhost:9600", "https://localhost:9601" ],
+    "Urls": [ "http://localhost:9600" ],
     "Jobs": [
       {
         "Name": "SendThanksMail",
@@ -21,7 +21,7 @@
       {
         "Name": "RemindDrinkWater",
         "Enable": true,
-        "CronExpression": "0 * * * *" /* At minute 0 */
+        "CronExpression": "*/2 * * * *" /* At every 2th minute */
       }
     ]
   }
